NetBSD Problem Report #28912

From dlagno@smtp.ru  Sat Jan  8 20:20:25 2005
Return-Path: <dlagno@smtp.ru>
Received: from flam.gado (nnfw2.beelinegprs.ru [217.118.93.2])
	by narn.netbsd.org (Postfix) with ESMTP id 755AD63B400
	for <gnats-bugs@gnats.NetBSD.org>; Sat,  8 Jan 2005 20:20:19 +0000 (UTC)
Message-Id: <200501082020.j08KK05j024952@flam.gado>
Date: Sat, 08 Jan 2005 23:20:00 +0300
From: "Denis Lagno" <dlagno@smtp.ru>
Reply-To: dlagno@smtp.ru
To: gnats-bugs@netbsd.org
Subject: ksh incorrectly handles history file
X-Send-Pr-Version: 3.95

>Number:         28912
>Category:       bin
>Synopsis:       ksh incorrectly handles history file
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Jan 08 20:21:00 +0000 2005
>Closed-Date:    Sat Oct 31 21:54:50 +0000 2009
>Last-Modified:  Sat Oct 31 21:55:09 +0000 2009
>Originator:     Denis Lagno
>Release:        NetBSD 2.99.11
>Organization:
Brigada
>Environment:
System: NetBSD flam.gado 2.99.11 NetBSD 2.99.11 (FLAM) #2: Thu Dec 30 03:22:19 MSK 2004 dina@flam.gado:/volatile/worksrc/netbsd-current/src/sys/arch/i386/compile/FLAM i386
it is SMP machine
Architecture: i386
Machine: i386
>Description:
pdksh in base system repeatedly corrupts its history file
if history file has big size and several ksh instances
exit simultaneously
it is pity because otherwise ksh is the only usable interactive
shell in base system
>How-To-Repeat:
have 700kb history file 
then run screen with a lot of ksh instances
and reboot
>Fix:
N/A

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: dsl@NetBSD.org
State-Changed-When: Sat, 31 Oct 2009 21:54:50 +0000
State-Changed-Why:
File locked during write.


From: David Laight <dsl@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/28912 CVS commit: src/bin/ksh
Date: Sat, 31 Oct 2009 21:54:01 +0000

 Module Name:	src
 Committed By:	dsl
 Date:		Sat Oct 31 21:54:01 UTC 2009

 Modified Files:
 	src/bin/ksh: history.c

 Log Message:
 Avoid generating a corrupt history file if multiple ksh exit together.
 Fixes PR/28912


 To generate a diff of this commit:
 cvs rdiff -u -r1.9 -r1.10 src/bin/ksh/history.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.