Avoid generating a corrupt history file if multiple ksh exit together. Fixes PR/28912